--- a/styles/globals.css
+++ b/styles/globals.css
@@ -85,7 +85,8 @@ h5 {
 }
 
 .text {
-  max-width: 600px;
+  max-width: 650px;
+  text-align: justify;
 }
 
 .disable-scrollbars::-webkit-scrollbar {
